--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "command-line-args": "^5.1.1",
+    "common-tags": "^1.8.0",
     "css-loader": "^5.1.3",
     "css-minimizer-webpack-plugin": "^1.3.0",
     "eslint": "^7.22.0",
@@ -42,6 +43,7 @@
     "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.5.3",
     "ts-loader": "^8.0.18",
+    "tui-code-snippet": "^2.3.2",
     "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "vm": "^0.1.0",
