--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "test:types:all": "lerna run --stream test:types",
     "build:all": "lerna run --stream build",
     "lint": "node ./scripts/pkg-script.js --script lint --type $type",
+    "test": "node ./scripts/pkg-script.js --script test --type $type",
     "test:types": "node ./scripts/pkg-script.js --script test:types --type $type",
     "serve": "node ./scripts/pkg-script.js --script serve --type $type",
     "serve:ie": "node ./scripts/pkg-script.js --script serve:ie --type $type",
